--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
+# custom
+*repomix-output.txt
+ctx/.obsidian/
+.DS_Store
+
+# Python pre-set gitignore file -----------------
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-# repomix
-*repomix-output.txt
 
 # C extensions
 *.so
@@ -161,4 +165,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-.DS_Store
